fixed student table and search aligning on teacher dashboard alongside adding some more students to seed file

--- a/rails_server/app/assets/stylesheets/teachers.css.scss
+++ b/rails_server/app/assets/stylesheets/teachers.css.scss
@@ -11,7 +11,7 @@
 
 @media only screen and (min-width: 64.063em) {
   #assign {
-    margin-top: 101px;
+    margin-top: 108px;
   }
 }
 
@@ -39,7 +39,7 @@
   width: 100%;
   overflow-x: scroll;
   display: block;
-  max-height: 50.65em;
+  max-height: 57em;
   overflow-y: scroll;
 }
 
